--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http:
   splash_screen_view: ^3.0.0
+  audioplayers: ^1.1.1
 
 dev_dependencies:
   flutter_test:
